--- a/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
@@ -94,6 +94,7 @@
                     </p:panelGrid>
 
                     <p:remoteCommand name="onAfterFormLoad" action="#{_bean.onAfterFormLoad()}"/>
+                    <ui:insert name="form_scripts"/>
                 </h:form>
             </pe:layoutPane>
 
