--- a/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
@@ -43,25 +43,41 @@
                          required="#{param['isRequired'] == 'true'}"
                          disabled="#{taskCardBean.readOnly}"
                          requiredMessage="#{bundle.Field} [#{bundle.Task}] #{bundle.MustBeFilled}"/>
-
+            
+            <p:outputLabel value="#{bundle.DateBegin}:" indicateRequired="true" rendered="#{taskCardBean.isShowExtTaskAtr()}"/>
+            <p:calendar value="#{taskCardBean.editedItem.beginDate}" disabledWeekends="true" 
+                        styleClass="without-spaces" rendered="#{taskCardBean.isShowExtTaskAtr()}"
+                        required="#{param['isRequired'] == 'true'}" 
+                        disabled="#{taskCardBean.readOnly}"
+                        locale="#{sessionBean.locale}"
+                        navigator="true" yearRange="c-120:c+20"                     
+                        requiredMessage="#{bundle.Field} [#{bundle.DateBegin}] #{bundle.MustBeFilled}">
+            </p:calendar>
+            
             <p:outputLabel value="#{bundle.PlanEndDate}:" indicateRequired="true"/>
-            <p:calendar value="#{taskCardBean.editedItem.planExecDate}" 
-                        styleClass="without-spaces"                            
+            <p:calendar value="#{taskCardBean.editedItem.planExecDate}" disabledWeekends="true" 
+                        styleClass="without-spaces"
                         required="#{param['isRequired'] == 'true'}" 
                         disabled="#{taskCardBean.readOnly}"
                         locale="#{sessionBean.locale}"
                         navigator="true" yearRange="c-120:c+20"                                
                         requiredMessage="#{bundle.Field} [#{bundle.PlanEndDate}] #{bundle.MustBeFilled}">
-            </p:calendar>                        
+            </p:calendar>
 
             <p:outputLabel value="#{bundle.State}"/>
             <p:inputText value="#{stateBean.getBundleName(taskCardBean.editedItem.state.currentState)}" disabled="true"/>             
             
             <p:separator/>
-            <p:commandButton value="#{bundle.Save}" update="centerFRM"
-                             action="#{taskCardBean.onCloseCard('save')}" style="float: right;">
-                <f:param name="isRequired" value="true"/>
-            </p:commandButton>
+            <h:panelGroup>
+                <p:commandButton value="#{bundle.Delete}" 
+                                 rendered="#{taskCardBean.isShowExtTaskAtr()}"
+                                 action="#{taskCardBean.onCloseCard('delete')}">                    
+                </p:commandButton>
+                <p:commandButton value="#{bundle.Save}" update="centerFRM"
+                                 action="#{taskCardBean.onCloseCard('save')}" style="float: right;">
+                    <f:param name="isRequired" value="true"/>
+                </p:commandButton>
+            </h:panelGroup>
         </p:panelGrid>
     </ui:define>
 </ui:composition>
