--- a/escom-bpm-web/src/main/webapp/view/common/confirm-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/confirm-dlg.xhtml
@@ -1,7 +1,6 @@
 <ui:composition  xmlns="http://www.w3.org/1999/xhtml"
                  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                 xmlns:p="http://primefaces.org/ui"
->
+                 xmlns:p="http://primefaces.org/ui">
 
     <p:confirmDialog global="true" showEffect="fade" hideEffect="fade" >
         <p:commandButton value="#{bundle.Yes}" type="button" styleClass="ui-confirmdialog-yes"  />
