--- a/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
@@ -8,10 +8,6 @@
 
     <ui:param name="_canNotClose" value="#{_canNotClose == null ? false : _canNotClose}"/>
 
-    <ui:define name="title">
-        #{bundle.AuthenticationLog}
-    </ui:define>
-
     <ui:define name="preRendered">
         <f:metadata>
             <f:event type="preRenderView" listener="#{_bean.onBeforeOpenCard()}"/>
@@ -30,8 +26,7 @@
                 }
             }
             window.addEventListener("load", init, false);
-        </script>
-        <script type="text/javascript" >
+
             var itemChange = 0;
         </script>
 
@@ -48,10 +43,11 @@
             }
         </style>
 
-        <pe:layout fullPage="true" options="#{_bean.layoutOptions}">
+        <pe:layout fullPage="true" options="#{_bean.layoutOptions}" style="font-size: 80%;">
             <p:ajax event="resize" listener="#{_bean.handleResize}"/>
 
             <pe:layoutPane id="center" position="center" resizable="true">
+                <ui:insert name="centerFacet"/>
                 <h:form id="centerFRM" >
                     <p:hotkey bind="esc" id="hotskey"
                               immediate="true"
@@ -63,7 +59,6 @@
                     </p:messages>
 
                     <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">
-
                         <p:toolbar >
                             <f:facet name="left">
                                 <p:menuButton value="#{bundle.Actions}" icon="ui-icon-gear">
@@ -98,7 +93,7 @@
                 </h:form>
             </pe:layoutPane>
 
-            <pe:layoutPane position="north" rendered="#{_bean.isNorthShow()}">>
+            <pe:layoutPane id="north" position="north" rendered="#{_bean.isNorthShow()}">>
                 <h:form id="northFRM" >
                     <p:outputPanel styleClass="ui-grid-col-12 btn-group">
                         <ui:insert name="northFormContent" />
@@ -106,7 +101,7 @@
                 </h:form>
             </pe:layoutPane>
 
-            <pe:layoutPane position="south" rendered="#{_bean.isSouthShow()}">>
+            <pe:layoutPane id="south" position="south" rendered="#{_bean.isSouthShow()}">
                 <h:form id="southFRM" >
                     <p:outputPanel styleClass="ui-grid-col-12 btn-group">
                         <ui:insert name="southFormContent" />
@@ -115,8 +110,16 @@
             </pe:layoutPane>
 
             <pe:layoutPane id="west" position="west" rendered="#{_bean.isWestShow()}">
-                <h:form id="leftFRM" >
+                <ui:insert name="leftFacet"/>
+                <h:form id="westFRM" >
                     <ui:insert name="leftFormContent"/>
+                </h:form>
+            </pe:layoutPane>
+            
+            <pe:layoutPane id="east" position="east" rendered="#{_bean.isEastShow()}">
+                <ui:insert name="rightFacet"/>
+                <h:form id="eastFRM" >
+                    <ui:insert name="rightFormContent"/>
                 </h:form>
             </pe:layoutPane>
 
