--- a/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
@@ -22,7 +22,8 @@
 
     <ui:define name="body">       
         <p:importConstants type="com.maxfill.dictionary.DictRights" var="DictRights" />
-
+        <p:importConstants type="com.maxfill.dictionary.DictStates" var="DictStates" />
+        
         <script type="text/javascript" >
             var itemChange = 0;
             function checkEsc(componentName) {
