--- a/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
@@ -41,6 +41,13 @@
                 background-color: #edef04;
             }
 
+            .ui-diagram-enter {
+                width:3em;
+                height:3em;
+                border-radius: 3em;
+                background-color: blue;
+            }
+            
             .ui-diagram-exit {
                 width:3em;
                 height:3em;
@@ -75,6 +82,22 @@
     <ui:define name="customJavaScript">
          <h:outputScript library="contextMenu" name="contextMenu.js" /> 
          <h:outputStylesheet library="contextMenu" name="contextMenu.css"/> 
+    </ui:define>
+    
+    <ui:define name="specActionMenu" >
+    </ui:define>
+    
+    <ui:define name="specMenuButtons" >
+        <p:commandButton id="btnRun" title="#{bundle.Run}" icon="ui-icon-play"
+                         disabled="#{processCardBean.readOnly or processCardBean.editedItem.state.currentState.id ne DictStates.STATE_DRAFT}"
+                         update="#{_frm}"
+                         actionListener="#{processCardBean.onRun()}">
+        </p:commandButton>
+        <p:commandButton id="btnStop" title="#{bundle.Stop}" icon="ui-icon-stop"
+                         disabled="#{processCardBean.readOnly or processCardBean.editedItem.state.currentState.id ne DictStates.STATE_RUNNING}"
+                         update="#{_frm}" 
+                         actionListener="#{processCardBean.onStop()}">
+        </p:commandButton>
     </ui:define>
     
     <ui:define name="card_scripts">
@@ -160,70 +183,77 @@
     </ui:define>
 
     <ui:define name="page_body">                
-        <p:tab id="cardTab" title="#{bundle.Process}" >
-            <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12" columnClasses="ui-grid-col-12">
+        <p:tab title="#{bundle.Scheme}" >            
+            <p:toolbar styleClass="ui-grid-col-12" >
+                <f:facet name="left">
+                    <p:commandButton value="Tasks" title="#{bundle.AddTasks}"
+                                    disabled="#{processCardBean.isReadOnly()}"
+                                    onstart="PF('statusDialog').show()"
+                                    oncomplete="PF('statusDialog').hide();"
+                                    actionListener="#{staffBean.onManySelectItem()}" >
+                       <p:ajax event="dialogReturn" listener="#{processCardBean.onStaffsSelected}" />
+                    </p:commandButton>
+                    <p:commandButton  value="And" title="#{bundle.AddLogicElement}"
+                                      disabled="#{processCardBean.isReadOnly()}"
+                                      actionListener="#{processCardBean.onAddLogicElement('And')}" >
+                    </p:commandButton>
+                    <p:commandButton  value="Or" title="#{bundle.AddLogicElement}"
+                                      disabled="#{processCardBean.isReadOnly()}"
+                                      actionListener="#{processCardBean.onAddLogicElement('Or')}" >
+                    </p:commandButton>
+                    <p:commandButton  value="If" title="#{bundle.AddCondition}"
+                                      disabled="#{processCardBean.isReadOnly()}"
+                                      actionListener="#{processCardBean.onAddConditionElement()}" >
+                    </p:commandButton>
+                    <p:commandButton  value="State" title="#{bundle.AddState}"
+                                      disabled="#{processCardBean.isReadOnly()}"
+                                      actionListener="#{processCardBean.onAddStateElement('success')}" >
+                    </p:commandButton>
+                    <p:commandButton  value="Enter" title="#{bundle.AddEnter}"
+                                      disabled="#{processCardBean.isReadOnly()}"
+                                      actionListener="#{processCardBean.onAddEnterElement()}" >
+                    </p:commandButton>
+                    <p:commandButton  value="Exit" title="#{bundle.AddExit}"
+                                      disabled="#{processCardBean.isReadOnly()}"
+                                      actionListener="#{processCardBean.onAddExitElement()}" >
+                    </p:commandButton>
+                    
+                    <span class="ui-separator">
+                        <span class="ui-icon ui-icon-grip-dotted-vertical" />
+                    </span>
+
+                    <p:commandButton title="Load" icon="ui-icon-folder-open"
+                                     actionListener="#{processCardBean.onLoadModelFromTempl()}"
+                                     update="diagramm">
+                    </p:commandButton>
+                    <p:commandButton title="Clear" icon="ui-icon-closethick"
+                                     actionListener="#{processCardBean.onClearModel()}"
+                                     update="diagramm">
+                    </p:commandButton>
+                    <p:commandButton type="button" title="Print" icon="ui-icon-print"/>
+                </f:facet>
+
+                <f:facet name="right">
+                    <p:menuButton value="Options">
+                        <p:menuitem value="Save" actionListener="#{processCardBean.onSaveModelToTempl()}" icon="ui-icon-disk" />
+                        <p:menuitem value="Reload" actionListener="#{processCardBean.onReloadModel()}" update="diagramm" icon="ui-icon-arrowrefresh-1-w" />
+                        <p:menuitem value="Clear" actionListener="#{processCardBean.onClearModel()}" update="diagramm" icon="ui-icon-close" />
+                    </p:menuButton>
+                </f:facet>
+            </p:toolbar>
+
+            <h:panelGrid columns="2" styleClass="ui-panelgrid-blank ui-grid-col-12" >
                 <p:outputLabel value="#{bundle.Name}" indicateRequired="true" />
-                    <p:inputText id="nameItem" value="#{processCardBean.editedItem.name}"
-                                 styleClass="ui-grid-col-12 col-padding"
-                                 onkeypress="checkEsc(#{_bean.cancelBtnName});"
-                                 onchange="return itemChange = 1;"
-                                 disabled="#{processCardBean.isReadOnly()}"
-                                 required="#{param['isRequired'] == 'true'}"
-                                 requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
-            </p:panelGrid>
-        </p:tab>
-
-        <p:tab title="#{bundle.Scheme}" >
-            <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12" columnClasses="ui-grid-col-12">
-                <p:toolbar styleClass="ui-grid-col-12" >
-                    <f:facet name="left">
-                        <p:commandButton value="Tasks" title="#{bundle.AddTasks}"
-                                        disabled="#{processCardBean.isReadOnly()}"
-                                        onstart="PF('statusDialog').show()"
-                                        oncomplete="PF('statusDialog').hide();"
-                                        actionListener="#{staffBean.onManySelectItem()}" >
-                           <p:ajax event="dialogReturn" listener="#{processCardBean.onStaffsSelected}" />
-                        </p:commandButton>
-                        <p:commandButton  value="And" title="#{bundle.AddLogicElement}"
-                                          disabled="#{processCardBean.isReadOnly()}"
-                                          actionListener="#{processCardBean.onAddLogicElement('And')}" >
-                        </p:commandButton>
-                        <p:commandButton  value="Or" title="#{bundle.AddLogicElement}"
-                                          disabled="#{processCardBean.isReadOnly()}"
-                                          actionListener="#{processCardBean.onAddLogicElement('Or')}" >
-                        </p:commandButton>
-                        <p:commandButton  value="If" title="#{bundle.AddCondition}"
-                                          disabled="#{processCardBean.isReadOnly()}"
-                                          actionListener="#{processCardBean.onAddConditionElement()}" >
-                        </p:commandButton>
-                        <p:commandButton  value="State" title="#{bundle.AddState}"
-                                          disabled="#{processCardBean.isReadOnly()}"
-                                          actionListener="#{processCardBean.onAddStateElement('success')}" >
-                        </p:commandButton>
-                        <span class="ui-separator">
-                            <span class="ui-icon ui-icon-grip-dotted-vertical" />
-                        </span>
-
-                        <p:commandButton title="Load" icon="ui-icon-folder-open"
-                                         actionListener="#{processCardBean.onLoadModelFromTempl()}"
-                                         update="diagramm">
-                        </p:commandButton>
-                        <p:commandButton title="Clear" icon="ui-icon-closethick"
-                                         actionListener="#{processCardBean.onClearModel()}"
-                                         update="diagramm">
-                        </p:commandButton>
-                        <p:commandButton type="button" title="Print" icon="ui-icon-print"/>
-                    </f:facet>
-
-                    <f:facet name="right">
-                        <p:menuButton value="Options">
-                            <p:menuitem value="Save" actionListener="#{processCardBean.onSaveModelToTempl()}" icon="ui-icon-disk" />
-                            <p:menuitem value="Reload" actionListener="#{processCardBean.onReloadModel()}" update="diagramm" icon="ui-icon-arrowrefresh-1-w" />
-                            <p:menuitem value="Clear" actionListener="#{processCardBean.onClearModel()}" update="diagramm" icon="ui-icon-close" />
-                        </p:menuButton>
-                    </f:facet>
-                </p:toolbar>
-
+                <p:inputText id="nameItem" value="#{processCardBean.editedItem.name}"
+                             styleClass="ui-grid-col-12 col-padding"
+                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                             onchange="return itemChange = 1;"
+                             disabled="#{processCardBean.isReadOnly()}"
+                             required="#{param['isRequired'] == 'true'}"
+                             requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
+            </h:panelGrid>
+            
+            <p:panelGrid columns="1" styleClass="ui-panelgrid-blank ui-grid-col-12" columnClasses="ui-grid-col-12">
                 <p:diagram id="diagramm" value="#{processCardBean.model}" style="height:1600px" styleClass="ui-widget-content ui-grid-col-12" var="el" >
                     <f:facet name="element" >
                         <h:outputLabel value="#{el.caption}" style="display:block;margin:1em;word-wrap:break-word;"/>
@@ -232,7 +262,6 @@
                     <p:ajax event="disconnect" listener="#{processCardBean.onDisconnect}" />
                     <p:ajax event="connectionChange" listener="#{processCardBean.onConnectionChange}" />                    
                 </p:diagram>                
-                
             </p:panelGrid>
         </p:tab>
     </ui:define>
